--- a/Webpage of Bus Management System by Kazi Mosaddequr 1831543042/index.html
+++ b/Webpage of Bus Management System by Kazi Mosaddequr 1831543042/index.html
@@ -331,7 +331,7 @@ https://www.tooplate.com/view/2121-wave-cafe
     <footer class="tm-site-footer">
       <p class="tm-black-bg tm-footer-text">Done by Kazi Mosaddequr
 
-      | Source: <a href="https://www.tooplate.com" class="tm-footer-link" rel="sponsored" target="_parent">Tooplate</a></p>
+      | Contact: </p>
     </footer>
   </div>
 
